--- a/css/general.css
+++ b/css/general.css
@@ -9,7 +9,7 @@ Sirve para resetear los paddings y margins, la configuración será igual todos 
     padding: 0;
 }
 
-/* Esta configuración sirve para que el padding y margin 
+/* Esta configuración sirve para que el padding y margin
 no se sume al modelo de caja */
 html {
     box-sizing: border-box;
@@ -34,19 +34,18 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
-/* adaptamos las imagenes al 100% */
+/* adaptamos las imagenes al 100%, Lautaro comenté esta imagen para no tener scroll vertical y no se vea pixelada*/
 
-img {
+/* img {
     width: 100%;
-}
+} */
 
 /* Configuramos las secciones que se repiten en todas las páginas */
-header,
-footer {
+header {
     /* Color principal */
     background-color: #FFCC01;
-    height: 100px;
-    width: 100%;
+    height: 80px;
+    width: 100vw;
     text-align: center;
     /* Configurando flex box con los elementos */
     display: flex;
@@ -59,10 +58,25 @@ footer {
 
 /* Configurando la imagen logo para que entre en el header */
 .img_logo {
-    width: 90px;
+    width: 80px;
+    height: 60px;
     /* Agregando sombra al logo */
     filter: drop-shadow(0 0 3px black);
 }
+/* 
+.img_principal {
+    border-style: solid;
+    border-color: black;
+    border-width: 1px;
+}
+
+.descripcion_pag {
+    border: 1px, black, solid;
+    width: 350px;
+    background-color: white;
+    padding-top: 5px;
+    padding-bottom: 5px;
+} */
 
 /* Configurando los li y anchor */
 header ul li {
@@ -70,8 +84,7 @@ header ul li {
     font-size: 1.2rem;
 }
 
-header a,
-footer a {
+header a {
     text-decoration: none;
     color: white;
     text-shadow: 1px 1px 1px black;
@@ -92,7 +105,7 @@ main {
     /* Centrando texto */
     text-align: center;
     /* Ocupar todo el espacio en blanco restante menos el alto de header y footer */
-    min-height: calc(100vh - 200px);
+    min-height: calc(100vh - 160px);
 }
 
 main h1 {
@@ -103,13 +116,13 @@ main h2 {
     font-size: 1.2rem;
 }
 
-/* Agregando contenedor */
+/* Agregando contenedor
 main .container {
     /* Limite ancho */
-    max-width: 1200px;
+    /* max-width: 1200px;
     /* Centramos el contenido */
-    margin: 0 auto;
-}
+    /* margin: 0 auto;
+} */
 
 /* Configuración de hover en los li */
 
@@ -126,6 +139,25 @@ header ul li a:hover {
 
 /* Configurando iconos del footer */
 
-footer i {
+footer {
+    background-color: #FFCC01;
+    height: 80px;
+    width: 100vw;
+    position: relative;
+    box-shadow: 0 1px 5px black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-size: 2rem;
+}
+
+.borde_mapa {
+    border: 1px solid black;
+}
+
+footer a {
+    margin: 15px;
+    text-decoration: none;
+    color: white;
+    text-shadow: 1px 1px 1px black;
 }
