agregando otros cambios

--- a/css/general.css
+++ b/css/general.css
@@ -65,10 +65,11 @@ footer {
 
 /* Configurando la imagen logo para que entre en el header */
 .img_logo {
-    width: 80px;
-    height: 60px;
+    width: 70px;
     /* Agregando sombra al logo */
-    filter: drop-shadow(0 0 3px black);
+    background-color: #fff;
+    border-radius: 50%;
+    filter: drop-shadow(0 0 5px black);
 }
 
 /* Configurando los li y anchor */
@@ -76,11 +77,13 @@ header ul li {
     list-style-type: none;
     font-size: 1.2rem;
 }
-
+header a, footer a {text-decoration: none;}
 header a {
-    text-decoration: none;
+    color: black;
+}
+footer a {
     color: white;
-    text-shadow: 1px 1px 1px black;
+    text-shadow: 0 0 5px black;
 }
 
 /* Configurando flex box en ul (contenedor de los li) */
