--- a/css/general.css
+++ b/css/general.css
@@ -117,6 +117,14 @@ main h2 {
     font-size: 1.2rem;
 }
 
+/* Agregando contenedor */
+main .container {
+    /* Limite ancho */
+    max-width: 1200px;
+    /* Centramos el contenido */
+    margin: 0 auto;
+}
+
 .background-img {
     width: 100%;  
     height: 100%;  
