--- a/css/general.css
+++ b/css/general.css
@@ -63,6 +63,14 @@ footer {
     box-shadow: 0 1px 5px black;
 }
 
+header {
+    flex-wrap: wrap;
+}
+
+header a {
+    width: 20%;
+}
+
 /* Configurando la imagen logo para que entre en el header */
 .img_logo {
     width: 70px;
@@ -89,6 +97,8 @@ footer a {
 /* Configurando flex box en ul (contenedor de los li) */
 header ul {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     gap: 1rem;
 }
 
@@ -124,7 +134,7 @@ main .container {
     /* Centramos el contenido */
     margin: 0 auto;
 }
-
+/* Imagen de fondo */
 .background-img {
     width: 100%;  
     height: 100%;  
