--- a/css/contacto.css
+++ b/css/contacto.css
@@ -9,7 +9,7 @@ section {
     padding-bottom: 56.25%;
     padding-top: 25px;
     height: 0;
-    margin: 0 auto;
+    margin: 2rem auto;
 }
 
 h1 {
@@ -23,6 +23,7 @@ h1 {
     background-color: rgba(0, 0, 0, 0.3);
     width: 100%;
     z-index: 100;
+    border-radius: 50px 50px 0 0;
 }
 /* Hacemos que los videos ocupen toda la section */
 iframe,video {
@@ -31,6 +32,12 @@ iframe,video {
     left: 0;
     width: 100%;
     height: 100%;
+    border-radius: 50px 50px 0 0;
+}
+/* Ocultar opciones de video para minimalismo */
+video::-webkit-media-controls-panel {
+    display: none !important;
+    opacity: 1 !important;
 }
 
 /* Media */
@@ -39,7 +46,8 @@ iframe,video {
         padding: unset;
      }
      main .container section h1 {
-        font-size: 1.5rem;
+        font-size: 1rem;
+        bottom: -2.5rem;
      }
  }
 
