corriendo error header después de agregar boostrap

--- a/css/index.css
+++ b/css/index.css
@@ -25,3 +25,8 @@ main section {
     justify-content: center;
     align-items: center;
 }
+/* Corrigiendo header después de agregar bootstrap */
+header .container ul {
+    margin: 0;
+    padding: 0;
+}
