--- a/css/index.css
+++ b/css/index.css
@@ -39,11 +39,6 @@ header .container nav ul {
 }
 
 /* Carousel correccion slide */
-.container_imagenes {
-    position: relative;
-    overflow: hidden;
-}
-
 .carousel {
     overflow: hidden;
 }
@@ -53,3 +48,9 @@ main img {
     box-shadow: 1px 1px 5px black;
     border: 1rem double;
 }
+
+@media (min-width: 800px) { 
+     main img {
+        width: unset;
+     }
+ }
