--- a/css/video.css
+++ b/css/video.css
@@ -5,7 +5,7 @@
 
 section {
     position: relative;
-    max-width: 900px;
+    max-width: 800px;
     padding-bottom: 56.25%;
     padding-top: 25px;
     height: 0;
@@ -15,8 +15,8 @@ section {
 h1 {
     /* Poniendo texto en la parte baja del section */
     position: absolute;
-    bottom: 0;
-    padding: 1rem;
+    top: 0;
+    padding: 2rem;
     text-shadow: 5px 5px 10px white,
                  -5px -5px 10px white,
                  0 0 10px white;
@@ -36,6 +36,10 @@ video {
     height: 100%;
     border-radius: 50px 50px 0 0;
 }
+
+iframe {
+    height: 80%;
+}
 /* Ocultar opciones de video para minimalismo */
 video::-webkit-media-controls-panel {
     display: none !important;
@@ -50,12 +54,12 @@ video::-webkit-media-controls-panel {
      }
      main .container section h1 {
         font-size: 1rem;
-        bottom: -2.5rem;
+        top: unset;
+        bottom: 0;
+        padding: 1rem;
+        border-radius: 0 0 50px 50px;
      }
      section {
         margin: 2.5rem auto;
-     }
-     h1 {
-        border-radius: 0 0 50px 50px;
      }
  }
