--- a/css/index.css
+++ b/css/index.css
@@ -32,6 +32,10 @@ header .container nav ul {
     margin: 0!important;
     padding: 0!important;
 }
+header img {
+    vertical-align: unset;
+}
+
 #ul {
     margin: 0!important;
     padding: 0!important;
