--- a/css/recetas_general.css
+++ b/css/recetas_general.css
@@ -47,8 +47,16 @@ section ul {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    /* Agregando viñetas de lista personalizada */
-    list-style-image: url('https://cdn-icons-png.flaticon.com/24/2447/2447668.png');
     font-size: 1.2rem;
 }
+/* Agregando viñetas de lista personalizada */
+main li::marker {
+    content: '🍴 ';
+}
+/* Agregando viñeta personalizada a strong */
+strong::after {
+    content: "🕗";
+}
+
+
 
