--- a/css/video.css
+++ b/css/video.css
@@ -1,9 +1,10 @@
 .container {
-    width: 100%;
-    height: 100%;
+    width: 60%;
+    height: 80%;
 }
 
 section {
+    /* Haciendo que los videos ocupen el 100% de su contenedor y ser responsivo */
     position: relative;
     max-width: 800px;
     padding-bottom: 56.25%;
@@ -12,14 +13,15 @@ section {
     margin: 2rem auto;
 }
 
+
 h1 {
     /* Poniendo texto en la parte baja del section */
     position: absolute;
     top: 0;
     padding: 2rem;
     text-shadow: 5px 5px 10px white,
-                 -5px -5px 10px white,
-                 0 0 10px white;
+        -5px -5px 10px white,
+        0 0 10px white;
     background-color: rgba(0, 0, 0, 0.3);
     width: 100%;
     z-index: 100;
@@ -37,9 +39,11 @@ video {
     border-radius: 50px 50px 0 0;
 }
 
-iframe {
-    height: 80%;
+video {
+    margin-bottom: 0;
+    overflow: hidden;
 }
+
 /* Ocultar opciones de video para minimalismo */
 video::-webkit-media-controls-panel {
     display: none !important;
@@ -48,18 +52,29 @@ video::-webkit-media-controls-panel {
 
 
 /* Media */
-@media (max-width: 490px) { 
-     main {
+@media (max-width: 576px) {
+    main {
         padding: unset;
-     }
-     main .container section h1 {
+    }
+
+    main .container section h1 {
         font-size: 1rem;
         top: unset;
         bottom: 0;
         padding: 1rem;
-        border-radius: 0 0 50px 50px;
-     }
-     section {
+        border-radius: unset;
+    }
+    .container {
+        width: 100%;
+        height: 100%;
+    }
+
+    section {
         margin: 2.5rem auto;
-     }
- }
+    }
+
+    iframe,
+    video {
+        border-radius: unset;
+    }
+}
