--- a/css/video.css
+++ b/css/video.css
@@ -1,4 +1,4 @@
-.container {
+main .container {
     width: 60%;
     height: 80%;
 }
@@ -64,7 +64,7 @@ video::-webkit-media-controls-panel {
         padding: 1rem;
         border-radius: unset;
     }
-    .container {
+    main .container {
         width: 100%;
         height: 100%;
     }
