--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,3 @@
-
 .img_principal {
     border: 1px solid black;
 }
@@ -24,21 +23,24 @@ main section {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    max-width: 670px;
+    margin: 0 auto;
 }
 
 /* CORRECCIONES DESPUES DE AGREGAR BOOTSTRAP */
 /* Corrigiendo header después de agregar bootstrap */
 header .container nav ul {
-    margin: 0!important;
-    padding: 0!important;
+    margin: 0 !important;
+    padding: 0 !important;
 }
+
 header img {
     vertical-align: unset;
 }
 
 #ul {
-    margin: 0!important;
-    padding: 0!important;
+    margin: 0 !important;
+    padding: 0 !important;
 }
 
 main a {
@@ -73,18 +75,60 @@ header #container a {
 
 main .container_imagenes img {
     border-radius: 10px;
-    box-shadow: 1px 1px 5px black;
-    border: 1rem double;
 }
 
-@media (min-width: 800px) { 
-     main img {
-        width: unset;
-     }
- }
+/* Animaciones */
 
- @media (max-width: 450px) { 
-      main {
+.container_imagenes {
+    border-radius: 50px;
+    /* Que el contenido no sobrepase el contenedor */
+    overflow: hidden;
+    box-shadow: 5px 5px 5px ;
+}
+
+.carousel-item {
+    /* Para que sus elementos fijen la posicion absoluta*/
+    position: relative;
+}
+
+.carousel-item h2 {
+    /* fijar el titulo en el contenedor*/
+    position: absolute;
+    color: white;
+    font-size: 2rem;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.3);
+    width: 100%;
+}
+
+.carousel-item img {
+    /* Que la imagen cubra todo su contenedor*/
+    object-fit: cover;
+    object-position: center;
+    animation: 5s linear 0s infinite alternate imagenes;
+}
+
+/* Animacion */
+@keyframes imagenes {
+    from {
+
+        transform: scale(1.3);
+    }
+
+    to {
+
+        transform: scale(1);
+    }
+}
+
+@media (min-width: 800px) {
+    main img {
+        width: unset;
+    }
+}
+
+@media (max-width: 450px) {
+    main {
         padding: 0;
-      }
-  }
+    }
+}
