--- a/css/index.css
+++ b/css/index.css
@@ -89,6 +89,7 @@ main .container_imagenes img {
 .carousel-item {
     /* Para que sus elementos fijen la posicion absoluta*/
     position: relative;
+    transition: all 1s ease-in;
 }
 
 .carousel-item h2 {
