--- a/css/recetas_general.css
+++ b/css/recetas_general.css
@@ -22,10 +22,6 @@ main h2 {
     font-size: 1.4rem;
 }
 
-main p {
-    line-height: 1.6;
-}
-
 main section {
     max-width: 75ch;
     background-color: #fff;
@@ -38,7 +34,7 @@ section {
     height: calc(100% - 20px);
     width: 100%;
     /* Efecto hoja de papel */
-    background-image: repeating-linear-gradient(white 0px, white 24px, steelblue 25px);
+    background-image: repeating-linear-gradient(white 0px, white 32px, rgb(190, 214, 234) 34px);
     box-shadow: 0 0 10px black;
 }
 
@@ -48,6 +44,10 @@ section ul {
     align-items: center;
     justify-content: center;
     font-size: 1.2rem;
+}
+
+p {
+    line-height: 2rem;
 }
 /* Agregando viñetas de lista personalizada */
 main li::marker {
