--- a/css/general.css
+++ b/css/general.css
@@ -175,3 +175,9 @@ footer a {
     color: white;
     text-shadow: 1px 1px 1px black;
 }
+
+@media (max-width: 490px) { 
+     main {
+        padding: .5rem;
+     }
+ }
