--- a/css/recetas_general.css
+++ b/css/recetas_general.css
@@ -48,6 +48,7 @@ section ul {
 
 p {
     line-height: 2rem;
+    text-align: left;
 }
 /* Agregando viñetas de lista personalizada */
 main li::marker {
