--- a/css/general.css
+++ b/css/general.css
@@ -177,7 +177,7 @@ footer a {
 }
 
 @media (max-width: 490px) { 
-     main {
-        padding: .5rem;
-     }
- }
+    main {
+       padding: 2.5rem .5rem;
+    }
+}
